Web Inspector: [Network] Data grid header and content cells are misaligned. https://bugs.webkit.org/show_bug.cgi?id=105795
Patch by Eugene Klyuchnikov <eustas@chromium.org> on 2013-01-09
Reviewed by Pavel Feldman.

Header and content tables have different width -> same percent values
turn to different cell widths.

* inspector/front-end/DataGrid.js: Add "corner" cell to all rows.
* inspector/front-end/dataGrid.css: Apply "corner" rules to "td" nodes.
(.data-grid .data-container): Remove artificial padding.

Canonical link: https://commits.webkit.org/124731@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139283 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/inspector/front-end/dataGrid.css
+++ b/Source/WebCore/inspector/front-end/dataGrid.css
@@ -26,7 +26,6 @@
     bottom: 0;
     left: 0;
     right: 0;
-    padding-right: 14px;
     overflow-x: hidden;
     overflow-y: overlay;
 }
@@ -48,11 +47,12 @@
     white-space: nowrap;
 }
 
-.data-grid th.corner {
+.data-grid th.corner,
+.data-grid td.corner {
     width: 14px;
     padding-right: 0px;
     padding-left: 0px;
-    border-right: 0 none transparent;
+    border-right: 0 none transparent !important;
 }
 
 .data-grid tr.filler {
@@ -69,7 +69,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    right: 16px;
+    right: 0;
     bottom: 0;
     height: 100%;
     border-top: 0 none transparent;
